--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -7,36 +7,19 @@
   <strong>Text:</strong>
   <%= @article.text %>
 </p>
-
+<%#This will now render the partial in app/views/comments/_comment.html.erb once for each comment that is in the @article.comments 
+collection. As the render method iterates over the @article.comments collection, it assigns each comment to a local variable named the 
+same as the partial, in this case comment which is then available in the partial for us to show.%>
 <h2>Comments</h2>
-<% @article.comments.each do |comment| %>
-  <p>
-    <strong>Commenter:</strong>
-    <%= comment.commenter %>
-  </p>
- 
-  <p>
-    <strong>Comment:</strong>
-    <%= comment.body %>
-  </p>
-<% end %>
+<%= render @article.comments %>
 
-<%#This adds a form on the Article show page that creates a new comment by calling the CommentsController create action. 
-The form_for call here uses an array, which will build a nested route, such as /articles/1/comments:%>
+<%#The second render just defines the partial template we want to render, comments/form. Rails is smart enough to spot the forward slash 
+in that string and realize that you want to render the _form.html.erb file in the app/views/comments directory:%>
+
 <h2>Add a comment:</h2>
-<%= form_for([@article, @article.comments.build]) do |f| %>
-  <p>
-    <%= f.label :commenter %><br>
-    <%= f.text_field :commenter %>
-  </p>
-  <p>
-    <%= f.label :body %><br>
-    <%= f.text_area :body %>
-  </p>
-  <p>
-    <%= f.submit %>
-  </p>
-<% end %>
+<%= render 'comments/form' %>
 
 <%= link_to 'Edit', edit_article_path(@article) %> |
 <%= link_to 'Back', articles_path %>
+
+<%#The @article object is available to any partials rendered in the view because we defined it as an instance variable.%>
