Add destroy action 8

--- a/app/views/comments/_comment.html.erb
+++ b/app/views/comments/_comment.html.erb
@@ -1,6 +1,6 @@
 <%# A comment partial to extract showing all the comments for the article.%>
 
-<p>
+  <p>
     <strong>Commenter:</strong>
     <%= comment.commenter %>
   </p>
@@ -8,4 +8,10 @@
   <p>
     <strong>Comment:</strong>
     <%= comment.body %>
+  </p>
+  
+  <p>
+  <%= link_to 'Destroy Comment', [comment.article, comment],
+               method: :delete,
+               data: { confirm: 'Are you sure?' } %>
   </p>
